# Revelation

./: .gitmodules  README.md
SourceCode/: CMakeLists.txt  CMakePresets.json
SourceCode/DataPersistence/: CMakeLists.txt  DataPersistenceInterface.cpp  DataPersistenceInterface.h  dllmain.cpp
SourceCode/DataPersistence/RoutineSerializer/: RoutineSerializer.cpp
SourceCode/DataPersistence/Sqlite/: SQLiteDatabase.cpp  SQLiteDatabase.h
SourceCode/DataPersistence/TaskSerializer/: TaskSerializer.cpp  TaskSerializer.h
SourceCode/Include/: IRevelationDataDefine.h
SourceCode/Include/DataPersistence/: IDataPersistenceInterface.h  IDatabase.h
SourceCode/Revelation/: CMakeLists.txt  Revelation.cpp  Revelation.h  RevelationBottomBar.cpp  RevelationConfig.cpp  RevelationInterface.cpp  RevelationListDelegate.cpp  RevelationListModel.cpp  RevelationListModel.h  RevelationListView.cpp  RevelationListView.h  RevelationMainWindow.cpp  RevelationRightSidebar.cpp  RevelationRightSidebar.h  RevelationRightSidebar.ui  RevelationSplash.cpp
SourceCode/Revelation/resource/: Revelation.rc
SourceCode/TimeMachine/: CMakeLists.txt  TimeMachine.cpp  TimeMachineFilter.cpp  TimeMachineGanttView.cpp  TimeMachineInterface.cpp  dllmain.cpp
SourceCode/Utilities/: CMakeLists.txt  SnowFlakeGenerator.cpp  dllmain.cpp
resources/image/: icon.ai
resources/qss/atomOneDark/: FluMenu.qss  FluMenuBar.qss  FluRoundMenuView.qss  FluTemplateDemo.qss
resources/qss/light/: FluPushButton.qss
resources/settings/: settings.json
